<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".Toolbar.SearchActivity"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="Search query term"
            tools:ignore="HardcodedText,TextFields"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSearch"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Begin Date"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="End Date"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTextLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutDate"
            android:weightSum="2">

            <EditText
                android:id="@+id/editTextBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="MM/DD/YY"
                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,TextFields"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="MM/DD/YY"
                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,TextFields"
                android:importantForAutofill="no"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLL"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/artsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Arts"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/politicsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Politics"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL1"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/businessCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Business"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/sportsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sports"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL2"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/entrepreneursCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Entrepreneurs"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/travelCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Travel"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkboxLL3"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="Search"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>