<resources>
    <string name="app_name">My News</string>
    <string name="tab_text_1">Top Stories</string>
    <string name="tab_text_2">Most Popular Stories</string>
    <string name="tab_text_3">Custom Stories</string>
    <string name="action_notification">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
</resources>
